# didi-challenge-17

./: .gitignore  .gitmodules  README.md
cnn_detection/: CMakeLists.txt  README.md  package.xml
cnn_detection/launch/: demo.launch  demo_view.launch  didi.launch  didi_kitti_view.launch  didi_view.launch
cnn_detection/models/: didi.prototxt  didi.yml
cnn_detection/scripts/: _init_paths.py  nms_detections.py  obstacle_painter.py  stream.py
cnn_detection/src/: sender_idx.cpp
didi_utils/: CMakeLists.txt  package.xml
didi_utils/include/didi_challenge/: cloud_filter.hpp  multi_smart_tracker.hpp  radar_track.hpp  smart_tracker.hpp
didi_utils/launch/: awesome_classifier.launch  car_tracker.launch  car_tracking.launch  didi-32.launch  interpolation.launch  interpolation_filter.launch  laser_birdview.launch  laser_birdview_car.launch  laser_birdview_kitti.launch  ped_tracker.launch  ped_tracking.launch  pedestrian_classifier.launch  smart_tracker.launch  tf.launch  tracking2tracklets.launch  tracklet_gen.launch  tracklets.launch  training.launch  training_rosbag_play.launch  velodyne_height_map.launch
didi_utils/scripts/: tracklet_generator.py  tracklet_lib.py  tracklet_to_marker.py  tracklets_to_kitti.py
didi_utils/src/: interpolation.cpp  laser_birdview.cpp  refinement.cpp  smart_tracking.cpp
didi_utils/src/didi_challenge/: cloud_filter.cpp  multi_smart_tracker.cpp  smart_tracker.cpp
perception_msgs/: CMakeLists.txt  README.md  package.xml
perception_msgs/include/perception_msgs/: perception_msgs_utils.hpp
perception_msgs/msg/: Obstacle.msg  ObstacleIndices.msg  ObstacleIndicesList.msg  ObstacleList.msg
perception_msgs/scripts/: obstaclelist_painter.py
perception_msgs/src/perception_msgs/: perception_msgs_utils.cpp
radar_driver/: CMakeLists.txt  package.xml
